@@ -1,4 +1,8 @@
-﻿drkns 02.02.2016 19:55:16 +0200 - build 4532
+﻿drkns 02.02.2016 21:17:56 +0200 - build 4533
+
+1. Адаптация граббера к 4526.
+
+drkns 02.02.2016 19:55:16 +0200 - build 4532
 
 1. С форума: в одном из билдов 4482-4484 сломался Editor.SetStr
 
